<resources>
    <string name="app_name">Kurdistan</string>
    <string name="searchbar_hint">جستوجو در سوپر مارکت کردستان</string>
    <string name="products">محصولات</string>
    <string name="price">قیمت</string>
    <string name="date">Date</string>
    <string name="date_age">Date_age</string>
    <string name="twice_back">برای خروج دوباره بازگشت را بزنید</string>
    <string name="pricee">Price</string>
    <string name="add">اضافه کردن</string>
    <string name="name">اسم محصول</string>
    <string name="product_image">عکس محصول</string>
    <string name="product_added">محصول شما با موفقیت اضافه شد</string>
</resources>